@@ -1,11 +1,12 @@
 package com.jobselector.backend.service;
 
 import com.jobselector.backend.dto.JobResponseDTO;
+import com.jobselector.backend.dto.CourseRecommendationDTO;
 import com.jobselector.backend.model.Job;
+import com.jobselector.backend.model.Skill;
 import com.jobselector.backend.model.JobSkillMapping;
 import com.jobselector.backend.repository.JobRepository;
 import com.jobselector.backend.repository.JobSkillMappingRepository;
-import com.jobselector.backend.repository.SkillRepository;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -17,48 +18,74 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class JobService {
 
-    private final JobRepository jobRepository;
-    private final JobSkillMappingRepository jobSkillMappingRepository;
-    private final SkillRepository skillRepository;
+        private final JobRepository jobRepository;
+        private final JobSkillMappingRepository jobSkillMappingRepository;
+        private final SkillService skillService;
+        private final CourseService courseService;
 
-    public List<JobResponseDTO> getRecommendedJobs(List<Integer> userSkillIds) {
+        public List<JobResponseDTO> recommendJobs(List<String> userSkillNames) {
 
-        List<Job> allJobs = jobRepository.findAll();
-        List<JobResponseDTO> result = new ArrayList<>();
+                // Convert skill names → skill objects
+                List<Skill> userSkills = skillService.getSkillsFromNames(userSkillNames);
 
-        for (Job job : allJobs) {
+                if (userSkills.isEmpty())
+                        return List.of();
 
-            List<JobSkillMapping> mappings = jobSkillMappingRepository.findByJobId(job.getId());
+                List<Job> allJobs = jobRepository.findAll();
+                List<JobResponseDTO> results = new ArrayList<>();
 
-            int totalImportance = mappings.stream()
-                    .mapToInt(JobSkillMapping::getImportance)
-                    .sum();
+                for (Job job : allJobs) {
 
-            int matchedImportance = mappings.stream()
-                    .filter(m -> userSkillIds.contains(m.getSkillId()))
-                    .mapToInt(JobSkillMapping::getImportance)
-                    .sum();
+                        // Get required skills for the job
+                        List<JobSkillMapping> mappings = jobSkillMappingRepository.findByJob(job);
 
-            double matchPercentage = (matchedImportance * 100.0) / totalImportance;
+                        int totalImportance = mappings.stream()
+                                        .mapToInt(JobSkillMapping::getImportance)
+                                        .sum();
 
-            List<String> missingSkills = mappings.stream()
-                    .filter(m -> !userSkillIds.contains(m.getSkillId()))
-                    .map(m -> skillRepository.findById(m.getSkillId()).get().getName())
-                    .collect(Collectors.toList());
+                        // Matched skills
+                        List<JobSkillMapping> matched = mappings.stream()
+                                        .filter(m -> userSkills.contains(m.getSkill()))
+                                        .toList();
 
-            result.add(new JobResponseDTO(
-                    job.getId(),
-                    job.getTitle(),
-                    job.getCompany(),
-                    job.getLocation(),
-                    job.getDescription(),
-                    matchPercentage,
-                    missingSkills
-            ));
+                        int matchedImportance = matched.stream()
+                                        .mapToInt(JobSkillMapping::getImportance)
+                                        .sum();
+
+                        double matchPercentage = totalImportance == 0 ? 0
+                                        : (matchedImportance * 100.0) / totalImportance;
+
+                        // Missing skills
+                        List<Skill> missingSkills = mappings.stream()
+                                        .map(JobSkillMapping::getSkill)
+                                        .filter(s -> !userSkills.contains(s))
+                                        .toList();
+
+                        // Course recommendations per missing skill
+                        Map<String, List<CourseRecommendationDTO>> courseMap = new HashMap<>();
+
+                        for (Skill missing : missingSkills) {
+                                courseMap.put(
+                                                missing.getName(),
+                                                courseService.recommendCoursesForSkill(missing.getName()));
+                        }
+
+                        results.add(new JobResponseDTO(
+                                        job.getId(),
+                                        job.getTitle(),
+                                        job.getCompany(),
+                                        job.getLocation(),
+                                        job.getDescription(),
+                                        matchPercentage,
+                                        matched.stream().map(m -> m.getSkill().getName()).toList(),
+                                        missingSkills.stream().map(Skill::getName).toList(),
+                                        courseMap));
+                }
+
+                // Sort by match % and return top 10
+                return results.stream()
+                                .sorted(Comparator.comparing(JobResponseDTO::getMatchPercentage).reversed())
+                                .limit(10)
+                                .collect(Collectors.toList());
         }
-
-        return result.stream()
-                .sorted(Comparator.comparing(JobResponseDTO::getMatchPercentage).reversed())
-                .collect(Collectors.toList());
-    }
 }
